# vortx

./: CHANGELOG.md  Cargo.toml  build.rs
.github/workflows/: ci.yaml
src/: lib.rs
src/linalg/: activation.rs  contiguous.rs  gemm.rs  mod.rs  obs.rs  op_assign.rs  ppo.rs  reduce.rs  reward.rs  sample.rs
vortx-shaders/: Cargo.toml  build.rs
vortx-shaders/src/: lib.rs
vortx-shaders/src/linalg/: activation.rs  contiguous.rs  gemm.rs  mod.rs  obs.rs  op_assign.rs  ppo.rs  reduce.rs  reward.rs  sample.rs  shape.rs
vortx-shaders/src/utils/: trig.rs
