[package]
name = "vortx-shaders"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform GPU kernels for linear algebra."
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
links = "vortx-shaders"
build = "build.rs"

[features]
unsafe_remove_boundchecks = ["khal-std/unsafe_remove_boundchecks"]

# When enabled, tensor shapes are passed via push constants instead of uniform buffers.
# This can be more efficient for frequently changing small data like shapes.
# Note: Push constants have a size limit (typically 128-256 bytes depending on hardware).
push_constants = []

# When enabled, shaders will use subgroup operations for reductions.
# When disabled, shaders will use manual reduction via shared memory.
subgroup_ops = []
cpu = ["khal-std/cpu", "khal/cpu"]
cpu-parallel = ["cpu", "khal-std/cpu-parallel"]
cuda = ["khal-std/cuda", "khal/cuda"]

[dependencies]
khal-std = { workspace = true }
# glamx provides UVec3 and other glam types (no_std compatible, used on all targets).
glamx = { version = "0.3", default-features = false, features = ["nostd-libm", "bytemuck"] }

[build-dependencies]
khal-std = { workspace = true }

# Host-only dependencies (excluded on GPU targets: spirv, nvptx64).
[target.'cfg(not(any(target_arch = "spirv", target_arch = "nvptx64")))'.dependencies]
khal = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
